2001-10-02  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* proto/cf/crossbar.cf, proto/cf/fqdnalias.cf,
	  proto/cf/p-uucp.cf, proto/cf/rrouter.cf,
	  proto/cf/standard.cf:
	    A bit more of revisions of 'returns' vs. 'return'
	    primitives.  Mostly adding comment: "error code return"

	* libsh/builtins.c:
	    Damn!  The  'returns'  primitive WAS NOT returing
	    _string_ in all cases.

2001-10-01  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* configure.in:
	    SH-script bug in SleepyCat DB 3.x tests.

	* proto/newdbprocessor.in, proto/cf/UTAI.cf, proto/cf/UTGPU.cf,
	  proto/cf/aliases-new.cf, proto/cf/aliases.cf, proto/cf/canon.cf,
	  proto/cf/crossbar.cf, proto/cf/fqdnalias.cf, proto/cf/p-routes.cf,
	  proto/cf/p-iproutes.cf, proto/cf/p-smtp.cf, proto/cf/p-usenet.cf,
	  proto/cf/p-uucp.cf, proto/cf/rrouter.cf, proto/cf/standard.cf:
	    Reports about problems when aliases map into purely decimal
	    digit containing local name prompted rewriting parts of the
	    scripts (and newdbprocessor tool!) with old(*) 'returns' return
	    in place of the original 'return' return.  The difference is
	    that 'returns' will _always_ yield a string, while 'return'
	    may yield an integer value if the username/whatever is made
	    of purely decimal digits...
	    ( *: "old" as "long existing" )

	* Makefile.in:
	    Release version 2.99.56-pre1

	* include/libc.h, proto/zmailer.sh.in, man/zmailer.1:
	    Update the beast at Solaris 2.6, and learn some
	    new things...

2001-09-30  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* configure.in, acconfig.h:
	    Autoconfig detection of  SleepyCat DB 3.x

	* router/db.c, router/libdb/bsdbtree.c, router/libdb/bsdhash,
	  smtpserver/policytest.c, utils/makedb/dblook.c,
	  utils/makedb/makedb.c, utils/vacation/vacation.c:
	    Use the SleepyCat DB 3.x call API; even prefer it!
	    (Except for vacation: Prefer NDBM, then GDBM, BSD DB...)

	* README.UPGRADING:
	    Note the usage of SleepyCat DB 3.x !
