@@ -1,5 +1,15 @@
 2001-10-02  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>
 
+	* scheduler/readconfig.c:
+	    Support arbitrary large sets of:
+	         AAAA/*
+		 BBBB/*
+		 CCCC/*
+		 DDDD/=
+		    params
+	    channel/host selector pairs preceding common
+	    parameter sets.  Original was just one.
+
 	* proto/cf/crossbar.cf, proto/cf/fqdnalias.cf,
 	  proto/cf/p-uucp.cf, proto/cf/rrouter.cf,
 	  proto/cf/standard.cf:
@@ -7,7 +17,7 @@
 	    primitives.  Mostly adding comment: "error code return"
 
 	* libsh/builtins.c:
-	    Damn!  The  'returns'  primitive WAS NOT returing
+	    Damn!  The  'returns'  primitive WAS NOT returning
 	    _string_ in all cases.
 
 2001-10-01  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>
